CMS7-8455: Added workaround for missing background color in context-icon SVG  - small pixel fixes for legacy icon and padding-top for first node

--- a/cms/api/src/main/styling/less/_tree.less
+++ b/cms/api/src/main/styling/less/_tree.less
@@ -23,7 +23,6 @@
 
 .hippo-tree {
   div.wicket-tree {
-    overflow: visible;
     white-space: nowrap;
 
     // Set to relative to allow selection-widget to go under
@@ -32,7 +31,7 @@
 
     .a_ {
       padding-top: 1px;
-      
+
       a:first-of-type:focus {
         outline: 0;
         background-color: transparent;
@@ -76,31 +75,34 @@
         span.icon {
           background-repeat: no-repeat;
           background-position: 50% 50%;
-          padding-top: 2px;
         }
 
         // Legacy text label 
         span + span {
           display: inline-block;
           padding-left: 2px;
-          padding-top: 5px;        
+          padding-top: 4px;
         }
       }
-      
+
       .hippo-tree-node-link:hover {
         span {
           text-decoration: underline;
         }
       }
-      
+
       // Dropdown
       .hippo-tree-dropdown-icon-container {
         background: transparent;
         position: absolute;
         display: none;
-        
+
         svg {
           fill: @aqua;
+
+          // Workaround for styling issue when text goes below context-icon 
+          border-radius: 10px;
+          background-color: @white;
         }
       }
 
@@ -119,13 +121,23 @@
 
       // white SVGs when node is selected
       .hippo-tree-node-link svg.hi-folder,
-      svg.hi {  
+      svg.hi {
         fill: @white;
       }
 
       .hippo-tree-dropdown-icon-container svg {
         fill: @white;
+        // Workaround for styling issue when text goes below context-icon 
+        border-radius: 10px;
+        background-color: @aqua;
       }
+    }
+
+    // Give padding to first visible child node. If we add this padding (or margin) to a parent div, the modal styling 
+    // breaks and the scrollbar is shown to soon both in the modal and the regular tree.
+    div.row-selected:nth-child(2),
+    div.row:nth-child(2) {
+      padding-top: 4px;
     }
 
     .indent-line,   // tree whitespace
@@ -159,7 +171,7 @@
         width: 9px;
         height: 9px;
       }
-      
+
       .hi-caret-down {
         left: 5px;
       }
@@ -169,7 +181,7 @@
       }
     }
   }
-  
+
   .hippo-tree-selection-widget {
     border-radius: 4px;
     background-color: @aqua;
